# icarus

./: .clangd  .codecov.yml  .cursorrules  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  data_dictionary.txt  debug_test.py  flake.nix  icarus_data_oriented_architecture.md
.agent/rules/: icarus.md
.agent/workflows/: read-docs.md
.beads/: README.md  config.yaml  last-touched
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  format.yml
components/: CMakeLists.txt  README.md  registration.cpp
components/aggregators/: ForceAggregator.hpp  MassAggregator.hpp
components/dynamics/: PointMass3DOF.hpp  RigidBody6DOF.hpp  Vehicle6DOF.hpp
components/environment/: AtmosphericDrag.hpp  PointMassGravity.hpp
components/mass/: StaticMass.hpp
components/propulsion/: FuelTank.hpp  RocketEngine.hpp
components/testing/: DummyComponent.hpp  StatefulComponent.hpp
config/: aggregation_demo.yaml  orbital_demo.yaml  phase_demo.yaml  rocket_6dof.yaml  rocket_routes.yaml  topology_demo.yaml  tumbling_body.yaml
config/examples/: freefall_demo.yaml  rocket_ascent.yaml  swarm_demo.yaml
docs/: icarus_bootstrap_guide.md
docs/api/: c_api_guide.md  component_authoring_guide.md  python_api_guide.md
docs/architecture/: 00_index.md  00a_quick_start.md  01_core_philosophy.md  02_component_protocol.md  03_signal_backplane.md  04_lifecycle.md  05_execution_model.md  06_entities_namespaces.md  07_janus_integration.md  08_vulcan_integration.md  09_memory_state_ownership.md  10_entity_lifecycle.md  11_summary_benefits.md  12_quantity_aggregation.md  13_configuration.md  14_trim_optimization.md  15_services.md  16_external_bindings.md  17_events_phases.md  18_error_handling.md  19_determinism_parallelism.md  20_recording.md  21_symbolic_constraints.md  22_testing.md  23_external_data.md
docs/implementation_plans/: component_registration_cleanup.md  config_api_improvement.md  icarus_implementation_plan.md  introspection_graph.md  nix_python_bindings.md  rigidbody6dof_multiframe.md  rocket_example.md  unified_vehicle_component.md  unwired_inputs.md
docs/implementation_plans/phase1/: phase1_3_signal_backplane.md  phase1_4_component_base.md  phase1_5_simulator_shell.md
docs/implementation_plans/phase2/: phase2_1_state_management.md  phase2_2_integrator_interface.md  phase2_3_first_real_component.md  phase2_4_component_interface.md  phase2_5_ascii_logging.md
docs/implementation_plans/phase3/: README.md  phase3_implementation_plan.md  simulation_builder_spec.md  symbolic_tracer_spec.md  task_checklist.md
docs/implementation_plans/phase4/: phase4.md  phase4_0_7_config_structs.md  phase4_0_7_entity_system.md  phase4_0_7_implementation.md  phase4_0_7_overview.md  phase4_0_7_scheduler.md  phase4_0_7_simulator_api.md  phase4_0_7_simulator_refactor.md  phase4_0_7_staging.md  phase4_0_7_yaml_config.md  phase4_0_config_infrastructure.md  phase4_staging_implementation.md
docs/implementation_plans/phase6/: phase_manager.md  recording.md  unified_signal_model.md  warmstart.md
docs/implementation_plans/phase7/: phase7_1_c_api.md  phase7_2_python_bindings.md  phase7_3_matlab_bindings.md
docs/implementation_plans/phase8/: phase8_1_trim_solver.md
docs/implementation_plans/phase9/: README.md  phase9_physical_component.md  phase9_vehicle6dof.md
docs/working_plans/: duplication_code_cleanup.md  io_reuse_for_recorder_vulcan.md
examples/: CMakeLists.txt  aggregation_demo.cpp  config_driven_demo.cpp  phase_switching_demo.cpp  point_mass_freefall.cpp  topology_demo.cpp  tumbling_body_demo.cpp
examples/intro/: formation_flight_demo.cpp  hello_world.cpp  orbital_demo.cpp
examples/python/: README.md  rocket_ascent.py
examples/symbolic/: reentry_dynamics_demo.cpp  symbolic_orbital_demo.cpp
include/icarus/: icarus.hpp
include/icarus/core/: AggregationTypes.hpp  Component.hpp  ComponentConfig.hpp  ComponentFactory.hpp  ComponentRegistry.hpp  Concepts.hpp  ConditionParser.hpp  Config.hpp  CoreTypes.hpp  Error.hpp  ErrorLogging.hpp  PhysicalComponent.hpp  Types.hpp  ValidationResult.hpp
include/icarus/io/: AsciiTable.hpp  Banner.hpp  Config.hpp  ConfigLoader.hpp  Console.hpp  DataDictionary.hpp  ErrorHandler.hpp  FlightManifest.hpp  HDF5Recorder.hpp  LogConfig.hpp  LogEntry.hpp  LogService.hpp  LogSink.hpp  MissionDebrief.hpp  MissionLogger.hpp  Recorder.hpp  RecordingReader.hpp  RouteLoader.hpp  ScalarFormat.hpp  SimulationLoader.hpp  WiringConfig.hpp
interfaces/: CMakeLists.txt
interfaces/c_api/: CMakeLists.txt  icarus.h  icarus.pc.in  icarus_c.cpp
interfaces/python/: CMakeLists.txt  icarus_python.cpp
interfaces/python/icarus/: __init__.py  py.typed
scripts/: build.sh  bump_version.sh  ci.sh  coverage.sh  dev.sh  install-hooks.sh  janus_audit.sh  run_example.sh  run_examples.sh  test.sh  verify.sh
src/: CMakeLists.txt
src/core/: Backplane.cpp
src/simulator/: Simulator.cpp
tests/: CMakeLists.txt
tests/components/: test_force_aggregator.cpp  test_mass_aggregator.cpp  test_point_mass.cpp  test_rigid_body_6dof.cpp  test_vehicle6dof.cpp
tests/core/: test_component.cpp  test_component_config.cpp  test_component_epoch.cpp  test_condition_parser.cpp  test_physical_component.cpp  test_types.cpp
tests/integration/: test_tumbling_body.cpp
tests/interfaces/: test_c_api.cpp
tests/io/: test_data_dictionary.cpp  test_introspection_graph.cpp  test_logging.cpp  test_recorder.cpp  test_simulation_loader.cpp
tests/python/: conftest.py  test_rocket_ascent.py  test_simulator.py
tests/signal/: test_signal.cpp  test_signal_router.cpp
tests/sim/: runner_and_reset_test.cpp  simulation_builder_test.cpp  test_config_structs.cpp  test_integrator.cpp  test_managers.cpp  test_phase_manager.cpp  test_scheduler.cpp  test_state_management.cpp  test_topology_analyzer.cpp  test_yaml_integration.cpp
tests/staging/: test_staging.cpp  test_symbolic_core.cpp  test_warmstart.cpp
tests/symbolic/: generate_graph_test.cpp  numeric_symbolic_comparison_test.cpp  symbolic_tracer_test.cpp
(+47 files in other folders)
