# External Interfaces (C API, Python, MATLAB)
# Currently placeholder - implementations added in Phase 7

# C API
# add_library(icarus_c SHARED
#   c_api/icarus_c.cpp
# )
# target_link_libraries(icarus_c PRIVATE icarus)

# Python bindings (pybind11)
# find_package(pybind11 QUIET)
# if(pybind11_FOUND)
#   pybind11_add_module(py_icarus python/py_icarus.cpp)
#   target_link_libraries(py_icarus PRIVATE icarus)
# endif()
